chandeliers-lus/tests/compile_fail/ui/syn/unclosed.rs
//! Node doesn't have a closing `tel`.
chandeliers_lus::decl! {
    node foo() returns ();
    let
        x = 9;
        y = 2;
}

fn main() {}
