chandeliers-lus/tests/compile_fail/ui/syn/unclosed.stderr
error: unexpected end of input, expected ident
 --> tests/fail/ui/syn/unclosed.rs:1:1
  |
1 | / chandeliers_lus::decl! {
2 | |     node foo() returns ();
3 | |     let
4 | |         x = 9;
5 | |         y = 2;
6 | | }
  | |_^
  |
  = note: this error originates in the macro `chandeliers_lus::decl` (in Nightly builds, run with -Z macro-backtrace for more info)
